--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,10 @@ header .mgnb{
   display: none;
 }
 
+.mquick{
+  display: none;
+}
+
 .scroll{
   transform: translateY(30px);
 	opacity: 0;
@@ -215,6 +219,9 @@ header .mgnb{
 }
 #content1 .main_slide .slick-dots{
   top: -20px;
+}
+#content1 .main_slide_mobile{
+  display: none;
 }
 
 .banner{
@@ -276,10 +283,10 @@ header .mgnb{
   margin-bottom: 10px;
 }
 #content2 .recom_slide li .recom_bottom .img{
-  flex: 0.25;
+  flex: 0.3;
 }
 #content2 .recom_slide li .recom_bottom .img img{
-  max-width: 110px;
+  max-width: 120px;
   min-width: 100px;
   background-color: #f9f9f9;
   border: 1px solid #f6f6f6;
@@ -287,10 +294,9 @@ header .mgnb{
   box-sizing: border-box;
 }
 #content2 .recom_slide li .recom_bottom .txt{
-  flex: 0.75;
+  flex: 0.7;
   margin: 15px;
 }
-
 li .txt{
   margin: 15px auto;
 }
@@ -482,7 +488,6 @@ li .img .icon_wrap .cart{
 #content5 .review_slide{
   max-width: 1040px;
   margin: 32px auto 0;
-  margin-top: 32px;
 }
 #content5 .review_slide li img{
   width: 100%;
@@ -496,6 +501,9 @@ li .img .icon_wrap .cart{
 }
 #content5 .review_slide .slick-next{
   right: -50px;
+}
+#content5 .review_slide_mobile{
+  display: none;
 }
 
 #content6{
@@ -592,27 +600,28 @@ footer .txt_wrap .nav_wrap{
 footer .txt_wrap .nav_wrap .nav_txt{
   display: flex;
 }
-footer .txt_wrap .nav_wrap .nav_txt>li{
+footer .txt_wrap .nav_wrap .nav_txt li{
   padding-right: 14px;
 }
-footer .txt_wrap .nav_wrap .nav_txt>li:last-child{
+footer .txt_wrap .nav_wrap .nav_txt li:last-child{
   padding-right: 0px;
 }
-footer .txt_wrap .nav_wrap .nav_txt>li:hover{
+footer .txt_wrap .nav_wrap .nav_txt li:hover{
   text-decoration: underline 1px;
 }
-footer .txt_wrap .nav_wrap .nav_txt>li a{
+footer .txt_wrap .nav_wrap .nav_txt li a{
   color: #fff;
   font-size: 1rem;
   padding-right: 14px;
   border-right: 1px solid #999;
 }
-footer .txt_wrap .nav_wrap .nav_txt>li:last-child a{
+footer .txt_wrap .nav_wrap .nav_txt li:last-child a{
   border-right: none;
   padding-right: 0px;
 }
 footer .txt_wrap .nav_wrap .seletsns_wrap{
   display: flex;
+  align-items: center;
 }
 footer .txt_wrap .nav_wrap .seletsns_wrap .select{
   display: flex;
@@ -630,6 +639,9 @@ footer .txt_wrap .nav_wrap .seletsns_wrap .select .select_btn{
   box-sizing: border-box;
   margin-left: 18px;
   cursor: pointer;
+}
+footer .txt_wrap .nav_wrap .seletsns_wrap .select .select_btn:first-child{
+  margin-left: 0px;
 }
 footer .txt_wrap .nav_wrap .seletsns_wrap .select .select_btn::before{
   content: '';
@@ -685,11 +697,11 @@ footer .txt_wrap .copy_wrap .copy_txt li{
   display: inline-block;
   margin-top: 12px;
   font-size: 12px;
-  padding-left: 10px;
+  margin-left: 10px;
   color: #ddd;
 }
 footer .txt_wrap .copy_wrap .copy_txt li.first{
-  padding-left: 0px;
+  margin-left: 0px;
 }
 footer .txt_wrap .copy_wrap .copy_txt li:not(.first)::before{
   background-color: #ddd;
@@ -726,7 +738,7 @@ footer .txt_wrap .copy_wrap .cs_txt .cs_txt4{
   width: 70px;
   height: 68px;
   right: 50px;
-  bottom: 50px;
+  bottom: 130px;
   background: url(../images/top버튼.png) no-repeat center/cover;
   text-align: center;
   line-height: 30px;
