--- a/css/login.css
+++ b/css/login.css
@@ -7,9 +7,6 @@ body{
   margin: 0 auto;
 }
 
-header{
-
-}
 header .back_btn{
   display: inline-block;
   margin-top: 40px;
@@ -114,6 +111,9 @@ section.login_member .form input:last-child{
   border-top: none;
   border-radius: 0 0 5px 5px;
 }
+section.login_member .form input:focus{
+  outline: none;
+}
 section.login_member .submit{
   height: 45px;
   background: #31363d;
@@ -142,4 +142,22 @@ footer .ment{
 footer .copyright{
   font-size: 12px;
   color: #888;
+}
+
+@media screen and (max-width: 720px){
+  body{
+    max-width: none;
+  }
+  header .back_btn{
+    margin: 10px 0 0 10px;
+  }
+  section.login_kakao{
+    margin: 40px 30px;
+  }
+  section.login_member{
+    margin: 0 30px;
+  }
+  footer{
+    margin: 0 30px;
+  }
 }
