--- a/css/faq.css
+++ b/css/faq.css
@@ -78,7 +78,9 @@ body{
   font-weight: bold;
   cursor: pointer;
 }
-
+.content_wrap .board_wrap{
+  width: 100%;
+}
 .content_wrap .board_wrap .title{
   position: relative;
   display: inline-block;
@@ -164,20 +166,29 @@ body{
   border-bottom: 1px solid #212121;
 }
 .content_wrap .board_wrap .board_list li{
-  height: 63px;
   padding-left: 20px;
   display: flex;
   justify-content: space-between;
+  border-top: 1px solid #ddd;
+  cursor: pointer;
 }
 .content_wrap .board_wrap .board_list li .board_title{
   line-height: 63px;
+  font-size: 15px;
+  font-weight: bold;
 }
-.content_wrap .board_wrap .board_list li .board_answer{
-  line-height: 1;
+.content_wrap .board_wrap .board_list li .board_title .board_answer{
   display: none;
+  color: #888;
+  font-weight: normal;
+  padding: 0 16px 23px;
+  line-height: 1.5;
 }
+
 .content_wrap .board_wrap .board_list li .board_btn{
   width: 60px;
+  flex-basis: 60px;
   background: url(../images/faq_icon_plus.png) no-repeat center;
-  height: 100%;
+  height: 63px;
+  flex-shrink: 0;
 }
