--- a/css/faq_media.css
+++ b/css/faq_media.css
@@ -34,5 +34,63 @@
   }
 }
 @media screen and (max-width: 720px){
-  
+  header .menu_wrap .menu .logo{
+    display: none;
+  }
+  header .menu_wrap .menu .mobile_back_icon{
+    display: block;
+    background: url(../images/faq_뒤로가기화살표.png)no-repeat center/20px;
+    width: 70px;
+    height: 40px;
+  }
+  header .menu_wrap .menu .mobile_gnb_btn{
+    display: block;
+    font-size: 35px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: transform 0.5s;
+  }
+  header .menu_wrap .menu .mobile_gnb_btn::after{
+    background: url(../images/faq_icon_nav.png) no-repeat center/25px;
+    content: '';
+    display: inline-block;
+    width: 40px;
+    height: 26px;
+  }
+  header .menu_wrap .menu .mobile_gnb_btn.on{
+    transform: rotate(-180deg);
+  }
+  header .menu_wrap .menu .gnb_icon a{
+    width: 38px;
+    height: 40px;
+  }
+  header .menu_wrap .menu .gnb_icon a:first-child{
+    margin-left: 0;
+  }
+  .cat_depth{
+    display: none;
+  }
+  .content_wrap .side_wrap{
+    display: none;
+  }
+  .content_wrap .board_wrap .title{
+    display: none;
+  }
+  .content_wrap .board_wrap .search{
+    margin: 75px 35px 0;
+    border-bottom: 4px solid #fdb814;
+    padding-bottom: 10px;
+  }
+  .content_wrap .board_wrap .search::before{
+    background: url(../images/검색아이콘.png) no-repeat left/40px;
+    width: 40px;
+    height: 42px;
+  }
+  .content_wrap .board_wrap .search input{
+    font-size: 32px;
+    color: #212121;
+  }
+  .content_wrap .board_wrap .inq{
+
+  }
 }
