--- a/css/faq.css
+++ b/css/faq.css
@@ -126,6 +126,8 @@ header .menu_wrap .menu .mobile_gnb_btn{
   font-size: 15px;
   color: #888;
   padding: 0 0 10px 15px;
+  display: inline-block;
+  width: calc(100% - 65px);
 }
 .content_wrap .board_wrap .search input:focus{
   outline: none;
@@ -137,6 +139,7 @@ header .menu_wrap .menu .mobile_gnb_btn{
 }
 .content_wrap .board_wrap .inq strong{
   position: relative;
+  cursor: pointer;
 }
 .content_wrap .board_wrap .inq strong::after{
   position: absolute;
@@ -179,6 +182,9 @@ header .menu_wrap .menu .mobile_gnb_btn{
   content: "";
   background: #999;
 }
+.content_wrap .board_wrap .mobile_tab{
+  display: none;
+}
 .content_wrap .board_wrap .board_list{
   margin-top: 15px;
   border-top: 1px solid #212121;
@@ -192,21 +198,20 @@ header .menu_wrap .menu .mobile_gnb_btn{
   cursor: pointer;
 }
 .content_wrap .board_wrap .board_list li .board_title{
-  line-height: 63px;
   font-size: 15px;
   font-weight: bold;
+  padding: 24px 0;
 }
 .content_wrap .board_wrap .board_list li .board_title .board_answer{
   display: none;
   color: #888;
   font-weight: normal;
-  padding: 0 16px 23px;
+  padding: 23px 0 0 16px;
   line-height: 1.5;
 }
 
 .content_wrap .board_wrap .board_list li .board_btn{
   width: 60px;
-  flex-basis: 60px;
   background: url(../images/faq_icon_plus.png) no-repeat center;
   height: 63px;
   flex-shrink: 0;
