--- a/css/faq_media.css
+++ b/css/faq_media.css
@@ -91,6 +91,59 @@
     color: #212121;
   }
   .content_wrap .board_wrap .inq{
-
+    margin: 30px 35px 0;
+    display: flex;
+    justify-content: space-between;
+    color: #888;
+    font-size: 25px;
   }
+  .content_wrap .board_wrap .inq strong{
+    color: #222;
+    line-height: 1.3;
+  }
+  .content_wrap .board_wrap .tab{
+    display: none;
+  }
+  .content_wrap .board_wrap .mobile_tab{
+    display: block;
+    margin: 42px 35px 0;
+    width: calc(100% - 65px);
+    height: 85px;
+    font-size: 25px;
+    padding: 0 35px;
+    border: 2px solid #ddd;
+  }
+  .content_wrap .board_wrap .mobile_tab:focus-visible{
+    outline: none;
+  }
+  .content_wrap .board_wrap .board_list{
+    margin-top: 75px;
+    border-top: none;
+    border-bottom: 1px solid #212121;
+  }
+  .content_wrap .board_wrap .board_list li{
+    padding: 50px 35px;
+  }
+  .content_wrap .board_wrap .board_list li .board_title{
+    line-height: 1.5;
+    font-size: 27px;
+    padding: 0;
+  }
+  .content_wrap .board_wrap .board_list li .board_title .board_answer{
+    display: none;
+    color: #888;
+    font-weight: normal;
+    padding: 30px 0 0 0;
+    line-height: 1.5;
+  }
+  .content_wrap .board_wrap .board_list li .board_btn{
+    background: url(../images/faq_icon_plus_mobile.png) no-repeat center/contain;
+    height: 45px;
+    width: 45px;
+    margin-left: 20px;
+  }
+  .content_wrap .board_wrap .board_list li .board_btn.active{
+    background: url(../images/faq_icon_minus_mobile.png) no-repeat center/contain;
+  }
+
 }
