--- a/css/login.css
+++ b/css/login.css
@@ -20,7 +20,6 @@ header .back_btn{
   text-align: center;
   background: url(../images/login_뒤로가기버튼.png) no-repeat 10px 9px/8px;
   box-sizing: border-box;
-  cursor: pointer;
 }
 header .back_btn:hover{
   background-color: #fafafa;
@@ -159,5 +158,11 @@ footer .copyright{
   }
   footer{
     margin: 0 30px;
+  }
+}
+
+@media screen and (max-width: 360px){
+  body{
+    width: 360px;
   }
 }
